--- a/components/awesome-quote.html
+++ b/components/awesome-quote.html
@@ -3,6 +3,9 @@
 		<div class="row">
 			<div class="col-md-12">
 				<blockquote>
+					<template is="dom-if" if="{{awesome-title}}">
+						<h3>[[awesome-title]]</h3>
+					</template>
 					<content></content>
 				</blockquote>
         	</div>
