--- a/components/static-navbar.html
+++ b/components/static-navbar.html
@@ -19,14 +19,24 @@
                           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Experiments 
                           <span class="caret"></span></a>
                           <ul class="dropdown-menu">
+                            <li role="separator" class="divider"></li>
+                            <li><a target="_blank" href="https://github.com/ladrower/book-library-browser-extensions">Book Library API</a></li>
+                            <li><a target="_blank" href="https://github.com/ladrower/integer-to-text-converter">Integer To Text</a></li>
+                            <li><a target="_blank" href="https://github.com/ladrower/wordpress-geographical-redirect">Geo Redirect</a></li>
+                            <li><a target="_blank" href="https://github.com/ladrower/vnuki-modules">Chunk Uploaders</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a target="_blank" href="https://github.com/ladrower/jquery-ui-intervals">Multi-range Slider</a></li>
+                            <li role="separator" class="divider"></li>
                             <li><a target="_blank" href="https://github.com/ladrower/data-security">Bio Signature</a></li>
+                            <li><a target="_blank" href="https://github.com/ladrower/brainfucker">Brainfucker</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a target="_blank" href="https://github.com/ladrower/sunshine">Sunshine</a></li>
+                            <li role="separator" class="divider"></li>
                             <li><a target="_blank" href="https://github.com/ladrower/cpping">C++</a></li>
                             <li><a target="_blank" href="https://github.com/ladrower/pebble-hello">Pebble</a></li>
                             <li><a target="_blank" href="https://github.com/ladrower/OpenGLing">OpenGL</a></li>
-                           <!--  <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">One more separated link</a></li> -->
+                            <li><a target="_blank" href="https://123d.circuits.io/circuits/1575797/edit#breadboard">Arduino</a></li>
                           </ul>
                         </li>
                       </ul>
