--- a/components/video-player.html
+++ b/components/video-player.html
@@ -5,7 +5,7 @@
 				<div class="thumbnail text-center">
 					<h2 id="yid-[[yid]]">
 						<a href="#yid-[[yid]]">
-							<span class="badge pull-left">[[increment(index)]]</span>
+							<span class="badge pull-left">#[[increment(index)]]</span>
 						</a>
 						<b>[[title]]</b>
 					</h2>
